--- a/index.html
+++ b/index.html
@@ -25,7 +25,26 @@
   </head>
 <body>
   <div class="page">
-    <header class="header"></header>
+    <header class="header">
+      <nav class="nav">
+        <img class="logo"
+        src="./images/logo_coffeeshop_dark.svg"
+        alt="TripleTen logo"/>
+        <Ul class="nav__links">
+          <il>
+            <a href="recipes" class="nav__links">Recetas</a>
+          </il>
+          <il>
+            <a href="reservation" class="nav__links">Reservar una mesa</a>
+          </il>
+          <il>
+            <a href="contact" class="nav__links">Contactos</a>
+          </il>
+
+        </Ul>
+
+      </nav>
+    </header>
     <main class="content">
       <section class="recipes"></section>
       <section class="reservation"></section>
