--- a/index.html
+++ b/index.html
@@ -40,11 +40,21 @@
           <il>
             <a href="contact" class="nav__links">Contactos</a>
           </il>
-
         </Ul>
-
       </nav>
-    </header>
+<h1 class="header__title">
+          <span class="header__span-accent">Café de especialidad</span>
+          en Triple Peaks
+        </h1>
+        <p class="header__description">¡Te damos la bienvenida a nuestra zona de estudio! Aquí tenemos café para darte energía y motivar tu creatividad.</p>
+    <img class="header__image" src="./images/inside_coffee_shop.png" alt="Caricatura de Triple Peaks">
+    <div class="header__footer">
+      <p class="header__paragraph-hours">Horario:
+        Lunes a Viernes (de 10:00h a 19:00h)
+        Sábados y Domingos (de 11:00h a 18:00h)</p>
+        <p class="header__paragraph-address">Avenida del Éxito 200, Ciudad Triple Peaks</p>
+    </div>
+      </header>
     <main class="content">
       <section class="recipes"></section>
       <section class="reservation"></section>
