--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <div class="page">
     <header class="header">
       <nav class="nav">
-        <img class="logo"
+        <img class="header__logo"
         src="./images/logo_coffeeshop_dark.svg"
         alt="TripleTen logo"/>
         <Ul class="nav__links">
@@ -42,12 +42,14 @@
           </il>
         </Ul>
       </nav>
+     
 <h1 class="header__title">
           <span class="header__span-accent">Café de especialidad</span>
           en Triple Peaks
         </h1>
         <p class="header__description">¡Te damos la bienvenida a nuestra zona de estudio! Aquí tenemos café para darte energía y motivar tu creatividad.</p>
-    <img class="header__image" src="./images/inside_coffee_shop.png" alt="Caricatura de Triple Peaks">
+
+        <img class="header__image" src="./images/inside_coffee_shop.png" alt="Caricatura de Triple Peaks">
     <div class="header__footer">
       <p class="header__paragraph-hours">Horario:
         Lunes a Viernes (de 10:00h a 19:00h)
