--- a/index.html
+++ b/index.html
@@ -42,19 +42,24 @@
           </il>
         </Ul>
       </nav>
-     
-<h1 class="header__title">
+      <h1 class="header__title">
           <span class="header__span-accent">Café de especialidad</span>
-          en Triple Peaks
-        </h1>
+          <br /> en Triple Peaks</h1>
         <p class="header__description">¡Te damos la bienvenida a nuestra zona de estudio! Aquí tenemos café para darte energía y motivar tu creatividad.</p>
-
         <img class="header__image" src="./images/inside_coffee_shop.png" alt="Caricatura de Triple Peaks">
-    <div class="header__footer">
-      <p class="header__paragraph-hours">Horario:
-        Lunes a Viernes (de 10:00h a 19:00h)
-        Sábados y Domingos (de 11:00h a 18:00h)</p>
-        <p class="header__paragraph-address">Avenida del Éxito 200, Ciudad Triple Peaks</p>
+        <div class="header__footer">
+        <div class="user user_role_author">
+            <p class="header__paragraph">Horarios:</p>
+            <p class="header__paragraph">
+                Lunes a Viernes (10:00h a 19:00h)
+            </p>
+            <p class="header__paragraph">
+                Sábados y Domingos (11:00h a 18:00h)
+            </p>
+        </div>
+        <p class="header__paragraph">
+            Avenida del Éxito 200, Ciudad Triple Peaks
+        </p>
     </div>
       </header>
     <main class="content">
