--- a/index.html
+++ b/index.html
@@ -71,3 +71,11 @@
 </body>
 
 </html>
+
+<p>
+  <a href="https://jigsaw.w3.org/css-validator/check/referer">
+      <img style="border:0;width:88px;height:31px"
+          src="https://jigsaw.w3.org/css-validator/images/vcss-blue"
+          alt="Valid CSS!" />
+  </a>
+</p>
