--- a/index.html
+++ b/index.html
@@ -69,12 +69,16 @@
         <p class="recipes__subtitle">Echa un vistazo a las recetas que hemos reunido para que elabores tus propios snacks.</p>
         <div class="recipes__videos">
           <div class="recipes__video-item">
-          <iframe  src="https://www.youtube.com/embed/j6VlT_jUVPc?si=uCotSYQ91Zvqx3Bs" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-          <p class="recipes__video-caption">Receta en Aeropress
+          <iframe  class="recipes__videos-iframe" src="https://www.youtube.com/embed/j6VlT_jUVPc?si=uCotSYQ91Zvqx3Bs" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+          <div class="recipes__video-caption">
+          <p>Receta en Aeropress
             ~5 min</p>
-          <iframe src="https://www.youtube.com/embed/st571DYYTR8?si=uOQLKcaAsyU7veYO" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-        <p class="recipes__video-caption">Receta en cafetera francesa
+          </div>
+          <iframe class="recipes__videos-iframe" src="https://www.youtube.com/embed/st571DYYTR8?si=uOQLKcaAsyU7veYO" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+          <div class="recipes__video-caption">
+            <p class=>Receta en cafetera francesa
           ~15 min</p>
+          </div>
         </div>
         </div>
       </section>
