--- a/index.html
+++ b/index.html
@@ -31,15 +31,15 @@
         src="./images/logo_coffeeshop_dark.svg"
         alt="TripleTen logo"/>
         <Ul class="nav__links">
-          <il>
+          <li>
             <a href="recipes" class="nav__links">Recetas</a>
-          </il>
-          <il>
+          </li>
+          <li>
             <a href="reservation" class="nav__links">Reservar una mesa</a>
-          </il>
-          <il>
+          </li>
+          <li>
             <a href="contact" class="nav__links">Contactos</a>
-          </il>
+          </li>
         </Ul>
       </nav>
       <h1 class="header__title">
@@ -64,25 +64,25 @@
       </header>
 
     <main class="content">
-      <section class="recipes">
+      <section class="recipes" id="recipes">
         <h2 class="recipes__title">Recetas</h2>
         <p class="recipes__subtitle">Echa un vistazo a las recetas que hemos reunido para que elabores tus propios snacks.</p>
         <div class="recipes__videos">
           <div class="recipes__video-item">
-          <iframe  class="recipes__videos-iframe" src="https://www.youtube.com/embed/j6VlT_jUVPc?si=uCotSYQ91Zvqx3Bs" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+          <iframe  class="recipes__iframe" src="https://www.youtube.com/embed/j6VlT_jUVPc?si=uCotSYQ91Zvqx3Bs" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
           <div class="recipes__video-caption">
           <p>Receta en Aeropress
             ~5 min</p>
           </div>
-          <iframe class="recipes__videos-iframe" src="https://www.youtube.com/embed/st571DYYTR8?si=uOQLKcaAsyU7veYO" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+          <iframe class="recipes__iframe" src="https://www.youtube.com/embed/st571DYYTR8?si=uOQLKcaAsyU7veYO" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
           <div class="recipes__video-caption">
-            <p class=>Receta en cafetera francesa
+            <p class>Receta en cafetera francesa
           ~15 min</p>
           </div>
         </div>
         </div>
       </section>
-      <section class="reservation"></section>
+      <section class="reservation" id="reservation"></section>
     </main>
     <footer class="footer"></footer>
   </div>
