--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
         alt="TripleTen logo"/>
         <Ul class="nav__links">
           <li>
-            <a href="recipes" class="nav__links">Recetas</a>
+            <a href="#recipes" class="nav__links">Recetas</a>
           </li>
           <li>
-            <a href="reservation" class="nav__links">Reservar una mesa</a>
+            <a href="#reservation" class="nav__links">Reservar una mesa</a>
           </li>
           <li>
-            <a href="contact" class="nav__links">Contactos</a>
+            <a href="#contact" class="nav__links">Contactos</a>
           </li>
         </Ul>
       </nav>
@@ -89,11 +89,3 @@
 </body>
 
 </html>
-
-<p>
-  <a href="https://jigsaw.w3.org/css-validator/check/referer">
-      <img style="border:0;width:88px;height:31px"
-          src="https://jigsaw.w3.org/css-validator/images/vcss-blue"
-          alt="Valid CSS!" />
-  </a>
-</p>
