--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
             <a href="#recipes" class="nav__links">Recetas</a>
           </li>
           <li>
-            <a href="#reservation" class="nav__links">Reservar una mesa</a>
+            <a href="#" class="nav__links">Reservar una mesa</a>
           </li>
           <li>
-            <a href="#contact" class="nav__links">Contactos</a>
+            <a href="#" class="nav__links">Contactos</a>
           </li>
         </Ul>
       </nav>
