--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
         alt="TripleTen logo"/>
         <Ul class="nav__links">
           <li>
-            <a href="#recipes" class="nav__links">Recetas</a>
+            <a href="#recipes" class="nav__link">Recetas</a>
           </li>
           <li>
-            <a href="#" class="nav__links">Reservar una mesa</a>
+            <a href="#reservation" class="nav__link">Reservar una mesa</a>
           </li>
           <li>
-            <a href="#" class="nav__links">Contactos</a>
+            <a href="#contact" class="nav__link">Contactos</a>
           </li>
         </Ul>
       </nav>
@@ -84,7 +84,7 @@
       </section>
       <section class="reservation" id="reservation"></section>
     </main>
-    <footer class="footer"></footer>
+    <footer class="footer" id="contact"></footer>
   </div>
 </body>
 
