--- a/index.html
+++ b/index.html
@@ -85,30 +85,32 @@
       <section class="reservation" id="reservation">
         <div>
             <h2 class="reservation__title">Reservar una mesa</h2>
-            <form class="reservation__form">
+            <form class="form reservation__form">
             <fieldset class="form__fieldset">
-              <label class="form__label" for="heading">Nombre*</label>
+              <label class="form__label" for="name">Nombre*</label>
                 <input
                 type="text"
                 class="form__input"
                 placeholder="Nombre"
-                id="heading"
-                name="heading"
+                id="name"
+                name="name"
                 required>
-                <label class="form__label" for="subheading">Número de comensales *</label>
+                <label class="form__label" for="diners-number">Número de comensales *</label>
                 <input
                 type="number"
                 class="form__input"
                 placeholder="1-8"
-                id="number"
-                name="number"
+                id="diners-number"
+                name="diners-number"
+                min="1"
+                max="8"
                 required>
                 <label class="form__label" for="date">Fecha y hora *</label>
                 <input
                 type="datetime-local"
                 class="form__input"
-                id="date-time"
-                name="date-time"
+                id="date"
+                name="date"
                 required>
                 <label class="form__label" for="email">Tu correo electrónico *</label>
                 <input
@@ -119,20 +121,21 @@
                 placeholder="email@email.com" required>
               </fieldset>
 
-              <fieldset class="form__handlers">
+              <fieldset class="form__fieldset">
                 <button
                 type="submit"
                 class="form__button">Reservar una mesa</button>
               </fieldset>
-              <fieldset class="form__footer">
+
+              <fieldset class="form__fieldset form__fieldset_el_center">
                 <input
                 type="checkbox"
                 name="checkbox"
-                id="terms"
-                value="terms"
+                id="checkbox"
+
                 class="form__checkbox"
                 required>
-                <label class="form__label" for="terms">Acepto los términos de uso</label>
+                <label class="form__lable form__lable_direction_right" for="checkbox">Acepto los términos de uso</label>
               </fieldset>
             </form>
           </div>
