--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
       name="keywords"
       content="cefeteria, proyecto, tripleten, programacion"
     />
-    <link rel="stylesheet" href="./vendor/normalize.css"/>
     <link rel="stylesheet" href="./pages/index.css"/>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -141,7 +140,22 @@
           </div>
       </section>
     </main>
-    <footer class="footer" id="contact"></footer>
+    <footer class="footer" id="contact">
+      <div class="footer__content">
+        <img class="footer__logo" alt="Logo TripleTen blanco" src="./images/logo_coffeeshop_light.svg">
+      <div class="footer__social">
+        <h3 class="footer__social_heading">Redes sociales</h3>
+        <ul class="footer__list">
+          <li class="footer__list-item">
+<p class="footer__list-item">Facebook</p>
+        <a class="footer__social-link" src="facebook.com"></a>
+        <img class="footer__social-icon" alt="Icono de Facebook" src="./images/facebook_white.svg">
+          </li>
+</ul>
+
+      </div>
+      </div>
+    </footer>
   </div>
 </body>
 
