--- a/index.html
+++ b/index.html
@@ -147,13 +147,18 @@
         <h3 class="footer__social_heading">Redes sociales</h3>
         <ul class="footer__list">
           <li class="footer__list-item">
-<p class="footer__list-item">Facebook</p>
-        <a class="footer__social-link" src="facebook.com"></a>
+        <a class="footer__social-link" href="Facebook.com">Facebook</a>
         <img class="footer__social-icon" alt="Icono de Facebook" src="./images/facebook_white.svg">
           </li>
+          <li class="footer__list-item">
+            <a class="footer__social-link" href="instagram.com">Instagram</a>
+            <img src="./images/instagram_white.svg" alt="Logo Instagram blanco" class="footer__social-icon">
+          </li>
 </ul>
-
       </div>
+      </div>
+      <div class="footer__copyright">
+        <p>Sofia Gonzalez 2025</p>
       </div>
     </footer>
   </div>
