--- a/index.html
+++ b/index.html
@@ -144,15 +144,15 @@
       <div class="footer__content">
         <img class="footer__logo" alt="Logo TripleTen blanco" src="./images/logo_coffeeshop_light.svg">
       <div class="footer__social">
-        <h3 class="footer__social_heading">Redes sociales</h3>
+        <p class="footer__social-heading">Redes sociales</p>
         <ul class="footer__list">
           <li class="footer__list-item">
-        <a class="footer__social-link" href="Facebook.com">Facebook</a>
         <img class="footer__social-icon" alt="Icono de Facebook" src="./images/facebook_white.svg">
-          </li>
+      <a class="footer__social-link" href="Facebook.com">Facebook</a>
+      </li>
           <li class="footer__list-item">
-            <a class="footer__social-link" href="instagram.com">Instagram</a>
-            <img src="./images/instagram_white.svg" alt="Logo Instagram blanco" class="footer__social-icon">
+<img src="./images/instagram_white.svg" alt="Logo Instagram blanco" class="footer__social-icon">
+          <a class="footer__social-link" href="instagram.com">Instagram</a>
           </li>
 </ul>
       </div>
