--- a/index.html
+++ b/index.html
@@ -140,28 +140,40 @@
           </div>
       </section>
     </main>
-    <footer class="footer" id="contact">
-      <div class="footer__content">
-        <img class="footer__logo" alt="Logo TripleTen blanco" src="./images/logo_coffeeshop_light.svg">
-      <div class="footer__social">
-        <p class="footer__social-heading">Redes sociales</p>
-        <ul class="footer__list">
-          <li class="footer__list-item">
-        <img class="footer__social-icon" alt="Icono de Facebook" src="./images/facebook_white.svg">
-      <a class="footer__social-link" href="Facebook.com">Facebook</a>
-      </li>
-          <li class="footer__list-item">
-<img src="./images/instagram_white.svg" alt="Logo Instagram blanco" class="footer__social-icon">
-          <a class="footer__social-link" href="instagram.com">Instagram</a>
-          </li>
-</ul>
-      </div>
-      </div>
-      <div class="footer__copyright">
-        <p>Sofia Gonzalez 2025</p>
-      </div>
-    </footer>
-  </div>
-</body>
-
+    <footer class="footer" id="footer">
+        <div class="footer__circle"></div>
+        <div class="footer__content">
+          <img
+            src="./images/logo_coffeeshop_light.svg"
+            alt="logo de cafeteria"
+            class="footer__logo"
+          />
+          <div class="footer__social">
+            <h3 class="footer__social-heading">Redes sociales</h3>
+            <ul class="footer__list">
+              <li class="footer__list-item">
+                <img
+                  src="./images/facebook_white.svg"
+                  alt="logo facebook"
+                  class="footer__social-icon"
+                />
+                <a href="#" class="footer__social-link">Facebook</a>
+              </li>
+              <li class="footer__list-item">
+                <img
+                  src="./images/instagram_white.svg"
+                  alt="logo instagram"
+                  class="footer__social-icon"
+                />
+                <a href="#" class="footer__social-link">Instagram</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div>
+          <p class="footer__copyright">&#x00a9; Sofia Gonzalez 2025</p>
+        </div>
+      </footer>
+    </div>
+  </body>
 </html>
