--- a/index.html
+++ b/index.html
@@ -63,26 +63,46 @@
       </header>
 
     <main class="content">
-      <section class="recipes" id="recipes">
-        <h2 class="recipes__title">Recetas</h2>
-        <p class="recipes__subtitle">Echa un vistazo a las recetas que hemos reunido para que elabores tus propios snacks.</p>
-        <div class="recipes__videos">
-          <div class="recipes__video-item">
-          <iframe  class="recipes__iframe" src="https://www.youtube.com/embed/j6VlT_jUVPc?si=uCotSYQ91Zvqx3Bs" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-          <div class="recipes__video-caption">
-          <p>Receta en Aeropress
-            ~5 min</p>
+        <section class="recipes" id="recipes">
+          <h2 class="recipes__title">Recetas</h2>
+          <p class="recipes__subtitle">
+            Echa un vistazo a las recetas que hemos reunido para que elabores
+            tus propios snacks.
+          </p>
+          <div class="recipes__videos">
+            <div class="recipes__video-item">
+              <div>
+                <iframe
+                  class="recipes__iframe"
+                  src="https://www.youtube.com/embed/j6VlT_jUVPc?si=QTOhFOig-ZQwvAiC"
+                  title="YouTube video player"
+                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                  referrerpolicy="strict-origin-when-cross-origin"
+                  allowfullscreen
+                ></iframe>
+                <div class="recipes__video-caption">
+                  <p>Receta en Aeropress</p>
+                  <p>~5 min</p>
+                </div>
+              </div>
+              <div>
+                <iframe
+                  class="recipes__iframe"
+                  src="https://www.youtube.com/embed/st571DYYTR8?si=9j8hAmHbughq223S"
+                  title="YouTube video player"
+                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                  referrerpolicy="strict-origin-when-cross-origin"
+                  allowfullscreen
+                ></iframe>
+                <div class="recipes__video-caption">
+                  <p>Receta en cafetera francesa</p>
+                  <p>~15 min</p>
+                </div>
+              </div>
+            </div>
           </div>
-          <iframe class="recipes__iframe" src="https://www.youtube.com/embed/st571DYYTR8?si=uOQLKcaAsyU7veYO" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-          <div class="recipes__video-caption">
-            <p class>Receta en cafetera francesa
-          ~15 min</p>
-          </div>
-        </div>
-        </div>
-      </section>
+        </section>
       <section class="reservation" id="reservation">
-        <div>
             <h2 class="reservation__title">Reservar una mesa</h2>
             <form class="form reservation__form">
             <fieldset class="form__fieldset">
@@ -137,7 +157,7 @@
                 <label class="form__lable form__lable_direction_right" for="checkbox">Acepto los términos de uso</label>
               </fieldset>
             </form>
-          </div>
+
       </section>
     </main>
     <footer class="footer" id="footer">
